syntax = "proto3";
//RPC服务名称
package user;

// RPC服务定义，service Services为固定写法
service Services {
  // RPC方法
  rpc addUser(addUserReq) returns (addUserRes) {}
}

message CtxUser {
  string userId = 1;
}
message Body {}
message Query {}
message Params {}
message Header {
  string requestId = 1;
}

//添加用户
message addUserReq {
  message Body {
    //用户ID
    string openUserId = 1;
    //证件类型
    string certType = 2;
    //证件图片
    string certImage = 3;
    //证件号
    string certNo = 4;
    //证件姓名
    string certName = 5;
    //人脸图片
    string faceImage = 6;
    //图片ID
    string imageId = 7;
  }
  
  //HTTP body
  Body body = 1;
  //HTTP query
  Query query = 2;
  //HTTP url params
  Params params = 3;
  //HTTP header
  Header header = 4;
  //用户信息
  CtxUser user = 5;
}

message addUserRes {
  message Data {
    //用户ID
    string openUserId = 1; 
  }

  //响应码
  int32 code = 1;
  //响应消息     
  string msg = 2;
  //返回数据
  Data data = 3;
}